Bug 1551664 [Wayland] Validate app name and check dbus path for remote server, r=heftig

Differential Revision: https://phabricator.services.mozilla.com/D59863

--HG--
extra : moz-landing-system : lando